--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
 
   # Frontend Next.js
   frontend:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: Dockerfile
