--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,18 @@
 # Dependencies
 node_modules
 npm-debug.log
+yarn-error.log
 
 # Next.js
 .next
 out
 build
+.next/cache
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env*.local
 
 # Git
 .git
@@ -30,6 +32,19 @@ Thumbs.db
 coverage
 .nyc_output
 
-# Misc
+# Documentation
+*.md
+!README.md
+
+# Logs
 *.log
+
+# Cache
 .cache
+
+# Artifacts y docs de desarrollo
+DOCKER_*.md
+SOLUCION_*.md
+COMANDOS_*.md
+*.ps1
+.dockerignore
