--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
-/.env
-/.env.example
-/.env.local
+# dependencies
 node_modules
-.next
+/.pnp
+.pnp.js
 
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Docker (ya no usado)
+docker-compose.yml
+Dockerfile
+.dockerignore
+
+# Prisma
+# NO ignorar prisma/schema.prisma ni migrations/
