--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.395.0",
     "mercadopago": "^2.11.0",
-    "next": "^14.2.18",
+    "next": "15.0.3",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "prisma": "^5.22.0",
