--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@mercadopago/sdk-react": "^1.0.6",
     "@prisma/client": "^5.22.0",
+    "@supabase/supabase-js": "^2.86.2",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.395.0",
     "mercadopago": "^2.11.0",
