--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.86.2",
     "bcryptjs": "^3.0.3",
+    "expo-server-sdk": "^4.0.0",
+    "jose": "^6.1.3",
     "lucide-react": "^0.395.0",
     "mercadopago": "^2.11.0",
     "next": "16.0.7",
