--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.86.2",
     "bcryptjs": "^3.0.3",
+    "clsx": "^2.1.1",
     "expo-server-sdk": "^4.0.0",
     "jose": "^6.1.3",
     "lucide-react": "^0.395.0",
@@ -35,6 +36,7 @@
     "resend": "^6.5.2",
     "sharp": "^0.33.5",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
