Cambio a cloudflare bucket

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
     "@mercadopago/sdk-react": "^1.0.6",
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.86.2",
