--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:seed": "node prisma/seed.js",
@@ -42,8 +43,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0-alpha.17",
+    "@types/jest": "^30.0.0",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.22",
+    "jest": "^30.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "ts-jest": "^29.4.6",
+    "typescript": "5.9.3"
   }
 }
