--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mercadopago/sdk-react": "^1.0.6",
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.86.2",
+    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "expo-server-sdk": "^4.0.0",
