--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.86.2",
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo-server-sdk": "^4.0.0",
     "jose": "^6.1.3",
